--- a/server/UI/variant_2/zadanie6_part1_var2.ui
+++ b/server/UI/variant_2/zadanie6_part1_var2.ui
@@ -587,201 +587,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_word_16">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>360</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>electrical</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_17">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>180</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>circuit</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_18">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>330</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>often</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_19">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>510</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>proportional</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_20">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>270</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>collide</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_21">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>300</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>heat</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_22">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>390</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>length</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_23">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>150</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>commonly</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_24">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>240</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>restrict</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_25">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>480</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>inversely</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_26">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>210</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>equation</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_27">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>420</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>offer</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_28">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>450</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>high</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_29">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>90</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>containing</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_30">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>120</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>electric</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="lineEdit_answer_16">
    <property name="geometry">
     <rect>
@@ -805,7 +610,7 @@
     <string>16</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_word_31">
+  <widget class="QLabel" name="label_word_16">
    <property name="geometry">
     <rect>
      <x>60</x>
@@ -816,19 +621,6 @@
    </property>
    <property name="text">
     <string>nearly</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_word_32">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>540</y>
-     <width>81</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>proportional</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_answer_17">
@@ -1063,6 +855,214 @@
    </property>
    <property name="text">
     <string>Правильный ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_17">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>90</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_18">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>120</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_19">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>150</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_20">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>180</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_21">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>210</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_22">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>240</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_23">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>270</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_24">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>300</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_25">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>330</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_26">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>360</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_27">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>390</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_28">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>420</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_29">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>450</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_30">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>480</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_31">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>510</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_word_32">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>540</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>nearly</string>
    </property>
   </widget>
  </widget>
